merge team/CCT-2075 into main (#985)